Added new image section, updated CSS animations and added new jQuery function

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="Slider/aaaaa_2226x970.jpg">
+            <img src="Slider/stefani_image_slider.jpg">
             <!--	<div class="carousel-caption">
                 <h1 class="display-2"> Toni's website </h1>
                     <h3> This  is an h3 header</h3>
@@ -118,10 +118,10 @@
 </div>
 
 <!--- Two Column Section -->
-<div class="container-fluid padding">
+<!--<div class="container-fluid">
     <div class="row padding">
         <div class="col-lg-6">
-            <h2 >Choose Sea...</h2>
+         <h2 >Choose Sea...</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nunc nisl, lacinia eget rhoncus in, accumsan et tortor. Suspendisse ut
                 mauris cursus velit eleifend mattis ac ac lorem.</p>
             <p> Aliquam erat volutpat. Nam sit amet hendrerit mauris. Ut cursus dapibus mollis.
@@ -132,12 +132,20 @@
             <br>
             <a href="#" class="btn btn-primary">Learn more</a>
 
-        </div>
+        </div> -->
+<div class="watches" id="selection">
 
-        <div class="col-lg-6">
+    <div class="col-s-4 text-center">
+        <h2>Our selection...</h2> <br>
 
-            <img src="img/desk.png" class="img-fluid">
-        </div>
+        <img src="watch1.png" class="img-fluid" id="watch1">
+        <img src="watch2.png" class="img-fluid">
+        <img src="watch3.png" class="img-fluid">
+        <img src="watch.png" class="img-fluid">
+
+    </div>
+</div>
+
     </div>
 
 </div>
