Fixed a bug where you could click anywhere on the new section to open a link

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     <div class="col-s-4 text-center">
         <h2>Our selection...</h2> <br>
 
-        <img src="watch1.png" class="img-fluid" id="watch1">
+        <img src="watch1.png" class="img-fluid">
         <img src="watch2.png" class="img-fluid">
         <img src="watch3.png" class="img-fluid">
         <img src="watch.png" class="img-fluid">
