--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="functions.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
+    <link rel="icon" href="whiteIcon.ico">
 </head>
 <body>
 
