--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light top" id="nav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"> <img src="Logos/whiteSea.png" id="logo" alt="Logo image"> </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse"
+        <a class="navbar-brand" href="#"> <img src="Logos/7575trsseawht.png" id="logo" alt="Logo image"> </a>
+       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
-        </button>
+        </button> -->
 
 
         <!--<div class="collapse navbar-collapse" id="navbarResponsive"> -->
@@ -45,13 +45,13 @@
 <!--- Image Slider -->
 <div id="slides" class="carousel slide" data-ride="carousel">
     <ul class="carousel-indicators">
-        <li data-target="#slides" data-slide-to="0" class="active"></li>
-        <li data-target="#slides" data-slide-to="1"></li>
+        <li  data-target="#slides" data-slide-to="0" class="active"></li>
+        <li  data-target="#slides" data-slide-to="1"></li>
         <li data-target="#slides" data-slide-to="2"></li>
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="Slider/stefani_image_slider.jpg">
+            <img src="Slider/slider1.JPG">
             <!--	<div class="carousel-caption">
                 <h1 class="display-2"> Toni's website </h1>
                     <h3> This  is an h3 header</h3>
@@ -60,10 +60,10 @@
                 </div> -->
         </div>
         <div class="carousel-item">
-            <img src="Slider/model-slider.jpg">
+            <img src="Slider/slider2.JPG">
         </div>
         <div class="carousel-item">
-            <img src="Slider/wrist-slider.jpg">
+            <img src="Slider/slider3.JPG">
         </div>
     </div>
 </div>
@@ -85,7 +85,7 @@
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4>" onclick="print()"> Séa </h1>
+            <h1 class="display-4>"> Séa </h1>
             <hr>
             <div class="col-12">
                 <p class="lead"> Séa is a design project dedicated to beautiful functionality, that boasts high standards, unique styling and emotion.</p>
@@ -95,6 +95,7 @@
 </div>
 
 <!--- Three Column Section -->
+<!---
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-xs-12 col-sm-6 col-md-4">
@@ -115,6 +116,7 @@
     </div>
 
 </div>
+--->
 <hr class="my-4">
 </div>
 
@@ -134,6 +136,7 @@
             <a href="#" class="btn btn-primary">Learn more</a>
 
         </div> -->
+<!--- Selection
 <div class="watches" id="selection">
 
     <div class="col-s-4 text-center">
@@ -150,17 +153,18 @@
     </div>
 
 </div>
-<hr class="my-4">
-<!--- Fixed background -->
+<hr class="my-4"> -->
+<!--- Fixed background
 <figure>
     <div class="fixed-wrap">
         <div id="fixed">
             <img class="img" src="img/mac.png">
         </div>
     </div>
-</figure>
+</figure>-->
 
 <!--- Emoji Section -->
+<!---
 <button class="fun" data-toggle="collapse" data-target="#emoji">Click to view</button>
 <div id="emoji" class="collapse">
     <div class="container-fluid padding">
@@ -180,7 +184,8 @@
         </div>
     </div>
 </div>
-<!--- Meet the team -->
+--->
+<!--- Meet the team
 <div class="container-fluid padding">
     <div class="row welcome text-center">
         <div class="col-12">
@@ -188,9 +193,10 @@
             <hr>
         </div>
     </div>
-</div>
+</div>  -->
 
 <!--- Cards -->
+<!--
 <div class="container-fluid padding">
     <div class="row padding">
         <div class="col-md-4">
@@ -225,17 +231,18 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 
-<!--- Test video embedding - successful-->
+<!--- Test video embedding - successful
 <video class="container-fluid padding" width="650px" height="650px" autoplay muted loop>
     <source src="Watch3d.mov" type="video/mp4">
-</video>
+    <hr>
+</video>-->
 <!--<img  width="50%" height="50%" class="container-fluid padding" class="gif" src="IMG_20190915_035801_Original_1.gif">
 -->
 
 
-<hr>
+
 <!--- Two Column Section -->
 
 
@@ -259,14 +266,14 @@
 
         <div class="col-lg-6">
 
-            <img src="img/bootstrap2.png" class="img-fluid">
+            <img src="Slider/seaSlider.JPG" class="img-fluid">
         </div>
     </div>
 
 </div>
 <hr class="my-4">
 
-<!--- Connect -->
+<!--- Connect
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-12">
@@ -280,14 +287,14 @@
             <a href="#"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
-</div>
+</div> -->
 
 <!--- Footer -->
-<footer>
-    <div class="container-fluid padding">
+<footer id="footer">
+    <div class="container-fluid padding" >
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="Logos/blackSea.png">
+                <img src="Logos/whiteSea.png">
                 <hr class="light">
                 <p>+359-000-0000</p>
                 <p>seadsgn@gmail.com</p>
