Changed a few file names, organised the project folder in a better way.

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     <script src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <script src="functions.js"></script>
     <link href="style.css" rel="stylesheet" type="text/css">
-    <link rel="icon" href="whiteIcon.ico">
+    <link rel="icon" href="favIcons/whiteIcon.ico">
 </head>
 <body>
 
 <!-- Navigation -->
 <nav class="navbar navbar-expand-md navbar-light top" id="nav">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#"> <img src="Logos/7575trsseawht.png" id="logo" alt="Logo image"> </a>
+        <a class="navbar-brand" href="#"> <img src="Logos/whiteSea.png" id="logo" alt="Logo image"> </a>
        <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
@@ -118,7 +118,7 @@
 </div>
 --->
 <hr class="my-4">
-</div>
+
 
 <!--- Two Column Section -->
 <!--<div class="container-fluid">
@@ -322,7 +322,7 @@
             </div>
             <div class="col-12">
                 <hr class="light-100">
-                <h5>&copy; sea.com</h5>
+                <h5>Sea.com &copy; Copyright 2021</h5>
             </div>
         </div>
     </div>
