Adding new shrift to the entire page, making adjustments to the major sections and little changes to responsiveness.

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 <nav class="navbar navbar-expand-md navbar-light top" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="Logos/whiteSea.png" id="logo" alt="Logo image"> </a>
-       <!-- <button class="navbar-toggler" type="button" data-toggle="collapse"
+       <!--- <button class="navbar-toggler" type="button" data-toggle="collapse"
                 data-target="#navbarResponsive">
             <span class="navbar-toggler-icon"></span>
-        </button> -->
+        </button>
 
 
-        <!--<div class="collapse navbar-collapse" id="navbarResponsive"> -->
-        <!--    <ul class="navbar-nav ml-auto">
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home</a>
                 </li>
@@ -36,8 +36,8 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Say Hello</a>
                 </li>
-        </ul> -->
-        <!-- </div> -->
+        </ul>
+         </div> --->
     </div>
 
 </nav>
@@ -82,16 +82,17 @@
 </div> -->
 
 <!--- Welcome Section -->
-<div class="container-fluid padding">
+<div class="container-fluid">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4>"> Séa </h1>
+            <h1 class="display-4" style="font-size: 50px"> Welcome to Séa </h1>
             <hr>
-            <div class="col-12">
-                <p class="lead"> Séa is a design project dedicated to beautiful functionality, that boasts high standards, unique styling and emotion.</p>
+        </div>
+
+        <div class="col-12">
+                <p class="lead text-center"> The beginning of something simply beautiful.</p>
             </div>
         </div>
-    </div>
 </div>
 
 <!--- Three Column Section -->
@@ -121,9 +122,9 @@
 
 
 <!--- Two Column Section -->
-<!--<div class="container-fluid">
+<!---<div class="container-fluid">
     <div class="row padding">
-        <div class="col-lg-6">
+        <div class="col-lg-10">
          <h2 >Choose Sea...</h2>
             <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nunc nisl, lacinia eget rhoncus in, accumsan et tortor. Suspendisse ut
                 mauris cursus velit eleifend mattis ac ac lorem.</p>
@@ -135,7 +136,19 @@
             <br>
             <a href="#" class="btn btn-primary">Learn more</a>
 
+        </div>
+        <div class="col-lg-2">
+
+            <img src="abs3.jpg" class="img-fluid">
+        </div>
+        </div>
         </div> -->
+<div>
+<img class="img-fluid" src="Images/creatorQuote.jpg">
+</div>
+
+<hr class="my-4">
+
 <!--- Selection
 <div class="watches" id="selection">
 
@@ -246,28 +259,20 @@
 <!--- Two Column Section -->
 
 
-<div class="container-fluid padding">
-    <div class="row padding">
-        <div class="col-lg-6">
-            <h2 >Seas' philosophy:</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nunc nisl, lacinia eget rhoncus in, accumsan et tortor. Suspendisse ut
-                mauris cursus velit eleifend mattis ac ac lorem.</p>
-            <p> Aliquam erat volutpat. Nam sit amet hendrerit mauris. Ut cursus dapibus mollis.
-                Nam porta sapien sit amet lectus mollis, molestie fermentum magna gravida.
-                Nullam vel volutpat mi. Duis imperdiet porta ante. Sed convallis nisi et nibh bibendum congue.</p>
-            <p> Aliquam erat volutpat. Nam sit amet hendrerit mauris. Ut cursus dapibus mollis.
-                Nam porta sapien sit amet lectus mollis, molestie fermentum magna gravida.
-                Nullam vel volutpat mi. Duis imperdiet porta ante. Sed convallis nisi et nibh bibendum congue.</p>
-            <p> Aliquam erat volutpat. Nam sit amet hendrerit mauris. Ut cursus dapibus mollis.
-                Nam porta sapien sit amet lectus mollis, molestie fermentum magna gravida.
-                Nullam vel volutpat mi. Duis imperdiet porta ante. Sed convallis nisi et nibh bibendum congue.</p>
-            <br>
+<div class="container-fluid paddingKnowledge">
+    <div>
+        <div class="text-center">
+            <h2>Expand your knowledge.</h2>
+            <p> Being founded in the most progressive of centuries, <br> Séa Design manufactures all of its products using the most precise and efficient technologies. <br>
+                Computer aided design and milling, metal 3D printing and laser engraving are a few of the technologies, that bring each concept to a complete product. <br>
+         Séa’s precise manufacturing leaves minimal amount of unused material, that is smelted and reused again, thus minimising its environmental footprint. <br>
+                Inspired by efficiency and simplicity, Séa is utilising modern and mindful solutions to achieve beauty.</p>
         </div>
 
-        <div class="col-lg-6">
+     <!--   <div class="col-lg-6">
 
             <img src="Slider/seaSlider.JPG" class="img-fluid">
-        </div>
+        </div> -->
     </div>
 
 </div>
@@ -290,7 +295,7 @@
 </div> -->
 
 <!--- Footer -->
-<footer id="footer">
+<footer>
     <div class="container-fluid padding" >
         <div class="row text-center">
             <div class="col-md-4">
@@ -322,7 +327,7 @@
             </div>
             <div class="col-12">
                 <hr class="light-100">
-                <h5>Sea.com &copy; Copyright 2021</h5>
+                <h5>Copyright &copy; 2021 Sea.com | All rights reserved. | Created by: Antoniy Hristov</h5>
             </div>
         </div>
     </div>
