--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="Slider/slider1.JPG">
+                <img src="Slider/slider1.JPG" id="slider1">
+
             <!--	<div class="carousel-caption">
                 <h1 class="display-2"> Toni's website </h1>
                     <h3> This  is an h3 header</h3>
@@ -60,10 +61,10 @@
                 </div> -->
         </div>
         <div class="carousel-item">
-            <img src="Slider/slider2.JPG">
+            <img src="Slider/slider2.JPG" id="slider2">
         </div>
         <div class="carousel-item">
-            <img src="Slider/slider3.JPG">
+            <img src="Slider/slider3.JPG" id="slider3">
         </div>
     </div>
 </div>
@@ -144,9 +145,8 @@
         </div>
         </div> -->
 <div>
-<img class="img-fluid" src="Images/creatorQuote.jpg">
+<img class="img-fluid" src="Images/creatorQuote.jpg" id="creator">
 </div>
-
 <hr class="my-4">
 
 <!--- Selection
@@ -278,21 +278,18 @@
 </div>
 <hr class="my-4">
 
-<!--- Connect
+<!--- Connect -->
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-12">
             <h2>Connect</h2>
         </div>
         <div class="col-12 social padding">
-            <a href="#"><i class="fab fa-facebook"></i></a>
-            <a href="#"><i class="fab fa-twitter"></i></a>
-            <a href="#"><i class="fab fa-google-plus-g"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="fab fa-youtube"></i></a>
+            <a target="_blank" href="https://www.facebook.com/abudigabas/"><i class="fab fa-facebook" ></i></a>
+            <a target="_blank" href="https://www.instagram.com/seadsgn/"><i class="fab fa-instagram" ></i></a>
         </div>
     </div>
-</div> -->
+</div>
 
 <!--- Footer -->
 <footer>
@@ -301,9 +298,9 @@
             <div class="col-md-4">
                 <img src="Logos/whiteSea.png">
                 <hr class="light">
-                <p>+359-000-0000</p>
-                <p>seadsgn@gmail.com</p>
-                <p>Karnobat, Burgas, Bulgaria</p>
+                <p>+45 546-878-64</p>
+                <p>abudigabbas@gmail.com</p>
+                <p>Viborg, Denmark</p>
             </div>
 
             <div class="col-md-4">
@@ -327,7 +324,7 @@
             </div>
             <div class="col-12">
                 <hr class="light-100">
-                <h5>Copyright &copy; 2021 Sea.com | All rights reserved. | Created by: Antoniy Hristov</h5>
+                <h5>Copyright &copy; 2021 Sea.com | All rights reserved. | Website created by: Antoniy Hristov</h5>
             </div>
         </div>
     </div>
