--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:filter="http://www.w3.org/1999/xhtml">
+<html lang="en">
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Séa</title>
+    <title>Séa</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
@@ -19,25 +19,6 @@
 <nav class="navbar navbar-expand-md navbar-light top" id="nav">
     <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="Logos/whiteSea.png" id="logo" alt="Logo image"> </a>
-       <!--- <button class="navbar-toggler" type="button" data-toggle="collapse"
-                data-target="#navbarResponsive">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-
-
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                <a class="nav-link " href="https://instagram.com/seadsgn" target="_blank"> Contacts </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Say Hello</a>
-                </li>
-        </ul>
-         </div> --->
     </div>
 
 </nav>
@@ -53,12 +34,6 @@
         <div class="carousel-item active">
                 <img src="Slider/slider1.JPG" id="slider1">
 
-            <!--	<div class="carousel-caption">
-                <h1 class="display-2"> Toni's website </h1>
-                    <h3> This  is an h3 header</h3>
-                    <button type="button" class="btn-outline-light btn-lg" id="b1">VIEW</button>
-                    <button type="button" class="btn-btn-primary btn-lg"> GOLQM BUTON</button>
-                </div> -->
         </div>
         <div class="carousel-item">
             <img src="Slider/slider2.JPG" id="slider2">
@@ -69,24 +44,13 @@
     </div>
 </div>
 
-<!--- Jumbotron -->
-<!---<div class="container-fluid">
-	<div class="row jumbotron">
-		<div class="col-xs-12 col-sm-12 col-md-9 col-lg-9 col-xl-10">
-			<p class="lead">Informaciq za saita na sea, koga e suzdaden. Kakvo stava izobshto. Koi bqh az. Kakvo stava izobshto. Koi bqh az. Kakvo stava izobshto. Koi bqh az.
-			</p>
-		</div>
-		<div class="col-xs-12 col-sm-12 col-md-3 col-lg-3 col-xl-3">
-			<a href="#"><button type="button" class="btn btn-outline-secondary btn-lg">Button</button></a>
-		</div>
-	</div>
-</div> -->
+
 
 <!--- Welcome Section -->
 <div class="container-fluid">
     <div class="row welcome text-center">
         <div class="col-12">
-            <h1 class="display-4" style="font-size: 50px"> Welcome to Séa </h1>
+            <h1 class="display-4" style="font-size: 50px"> Welcome to Séa </h1>
             <hr>
         </div>
 
@@ -96,193 +60,50 @@
         </div>
 </div>
 
-<!--- Three Column Section -->
-<!---
-<div class="container-fluid padding">
-    <div class="row text-center padding">
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <i class="fab fa-html5 fa-10x" style="color: red"></i>
-            <h3> HTML 5 </h3>
-            <p> Build with the latest version of HTML 5</p>
-        </div>
-        <div class="col-xs-12 col-sm-6 col-md-4">
-            <i class="fab fa-css3 fa-10x" style="color: blue" ></i>
-            <h3> CSS </h3>
-            <p> Build with the latest version of CSS - CSS 3</p>
-        </div>
-        <div class="col-sm-12 col-md-4">
-            <i class="fas fa-code fa-10x" style="color: green"></i>
-            <h3> Bootstrap </h3>
-            <p> Build with the latest version of Bootstrap - 4</p>
-        </div>
-    </div>
 
-</div>
---->
 <hr class="my-4">
 
-
-<!--- Two Column Section -->
-<!---<div class="container-fluid">
-    <div class="row padding">
-        <div class="col-lg-10">
-         <h2 >Choose Sea...</h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi nunc nisl, lacinia eget rhoncus in, accumsan et tortor. Suspendisse ut
-                mauris cursus velit eleifend mattis ac ac lorem.</p>
-            <p> Aliquam erat volutpat. Nam sit amet hendrerit mauris. Ut cursus dapibus mollis.
-                Nam porta sapien sit amet lectus mollis, molestie fermentum magna gravida.
-                Nullam vel volutpat mi. Duis imperdiet porta ante. Sed convallis nisi et nibh bibendum congue.</p>
-            <p>Etiam laoreet erat vel massa aliquet, eget feugiat dui efficitur.
-                bus sititae odio semper, ac tincidunt tortor rhoncus.</p>
-            <br>
-            <a href="#" class="btn btn-primary">Learn more</a>
-
-        </div>
-        <div class="col-lg-2">
-
-            <img src="abs3.jpg" class="img-fluid">
-        </div>
-        </div>
-        </div> -->
 <div>
 <img class="img-fluid" src="Images/creatorQuote.jpg" id="creator">
 </div>
+
 <hr class="my-4">
 
-<!--- Selection
-<div class="watches" id="selection">
-
-    <div class="col-s-4 text-center">
-        <h2>Our selection...</h2> <br>
-
-        <img src="watch1.png" class="img-fluid">
-        <img src="watch2.png" class="img-fluid">
-        <img src="watch3.png" class="img-fluid">
-        <img src="watch.png" class="img-fluid">
-
-    </div>
-</div>
-
-    </div>
-
-</div>
-<hr class="my-4"> -->
-<!--- Fixed background
-<figure>
-    <div class="fixed-wrap">
-        <div id="fixed">
-            <img class="img" src="img/mac.png">
-        </div>
-    </div>
-</figure>-->
-
-<!--- Emoji Section -->
-<!---
-<button class="fun" data-toggle="collapse" data-target="#emoji">Click to view</button>
-<div id="emoji" class="collapse">
-    <div class="container-fluid padding">
-        <div class="row text-center">
-            <div class="col-sm-6 col-md-3">
-                <img class="gif" src="img/gif/panda.gif">
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <img class="gif" src="img/gif/chicken.gif">
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <img class="gif" src="img/gif/poo.gif">
-            </div>
-            <div class="col-sm-6 col-md-3">
-                <img class="gif" src="img/gif/unicorn.gif">
-            </div>
-        </div>
-    </div>
-</div>
---->
-<!--- Meet the team
-<div class="container-fluid padding">
-    <div class="row welcome text-center">
-        <div class="col-12">
-            <h1 class="display-4">Meet the team</h1>
-            <hr>
-        </div>
-    </div>
-</div>  -->
-
-<!--- Cards -->
-<!--
-<div class="container-fluid padding">
-    <div class="row padding">
-        <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src="abs.jpg"w>
-                <div class="card-body">
-                    <h4 class="card-title"> Abudi Gabas </h4>
-                    <p class="card-text">Abudi Gabas is an inspiring designer and a self thought artist. He is said to become the first trillionaire by Forbes. </p>
-                    <a href="https://instagram.com/abudi_gabas" target="_blank" class="btn btn-outline-secondary">See profile</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src="ggg.jpg">
-                <div class="card-body">
-                    <h4 class="card-title"> Georgi Banchev </h4>
-                    <p class="card-text">Georgi Banchev is a self-thaught producer and video editor . He is currently the owner of Europes' most exclusive trap club - EXE </p>
-                    <a href="https://instagram.com/gogobanchev" target="_blank" class="btn btn-outline-secondary">See profile</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4">
-            <div class="card">
-                <img class="card-img-top" src="mih.jpg">
-                <div class="card-body">
-                    <h4 class="card-title">Mihail Kostov </h4>
-                    <p class="card-text">Mihail Kostov is a multi-talent person, with lots of skills variying from video-editting to singing/writing and producing music.
-                        He is set to be the new "Cole Bennett" of his generation</p>
-                    <a href="https://instagram.com/gogobanchev" target="_blank" class="btn btn-outline-secondary">See profile</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div> -->
-
-<!--- Test video embedding - successful
-<video class="container-fluid padding" width="650px" height="650px" autoplay muted loop>
-    <source src="Watch3d.mov" type="video/mp4">
-    <hr>
-</video>-->
-<!--<img  width="50%" height="50%" class="container-fluid padding" class="gif" src="IMG_20190915_035801_Original_1.gif">
--->
-
-
-
-<!--- Two Column Section -->
-
-
+<!--- Information about the brand -->
 <div class="container-fluid paddingKnowledge">
     <div>
         <div class="text-center">
             <h2>Expand your knowledge.</h2>
-            <p> Being founded in the most progressive of centuries, <br> Séa Design manufactures all of its products using the most precise and efficient technologies. <br>
+            <p> Being founded in the most progressive of centuries, <br> Séa Design manufactures all of its products using the most precise and efficient technologies. <br>
                 Computer aided design and milling, metal 3D printing and laser engraving are a few of the technologies, that bring each concept to a complete product. <br>
-         Séa’s precise manufacturing leaves minimal amount of unused material, that is smelted and reused again, thus minimising its environmental footprint. <br>
+         Séa’s precise manufacturing leaves minimal amount of unused material, that is smelted and reused again, thus minimising its environmental footprint. <br>
                 Inspired by efficiency and simplicity, Séa is utilising modern and mindful solutions to achieve beauty.</p>
         </div>
-
-     <!--   <div class="col-lg-6">
-
-            <img src="Slider/seaSlider.JPG" class="img-fluid">
-        </div> -->
     </div>
-
 </div>
+
+<hr class="my-4">
+
+<!--- Selection -->
+<div class="watches" id="selection">
+
+    <div class="col-s-6 text-center">
+        <h2>Our selection: </h2> <br>
+        <img src="Watches/watch1.png" class="img-fluid watch">
+        <img src="Watches/watch2.png" class="img-fluid watch">
+        <img src="Watches/watch3.png" class="img-fluid watch">
+        <img src="Watches/watch.png" class="img-fluid watch">
+
+    </div>
+</div>
+
 <hr class="my-4">
 
 <!--- Connect -->
 <div class="container-fluid padding">
     <div class="row text-center padding">
         <div class="col-12">
-            <h2>Connect</h2>
+            <h2>Connect with us...</h2>
         </div>
         <div class="col-12 social padding">
             <a target="_blank" href="https://www.facebook.com/abudigabas/"><i class="fab fa-facebook" ></i></a>
@@ -307,8 +128,8 @@
                 <hr class="light">
                 <h5>Opening hours:</h5>
                 <hr class="light">
-                <p>Monday: 9am - 5pm</p>
-                <p>Saturday: 10am - 4pm</p>
+                <p>Mon-Fri: </p>
+                <p>Saturday: </p>
             </div>
 
             <div class="col-md-4">
@@ -332,7 +153,3 @@
 
 </body>
 </html>
-
-
-
-
