--- a/index.html
+++ b/index.html
@@ -32,14 +32,14 @@
     </ul>
     <div class="carousel-inner">
         <div class="carousel-item active">
-                <img src="Slider/slider1.JPG" id="slider1">
+                <img src="Slider/slider1.JPG" id="slider1" alt="First Slider image">
 
         </div>
         <div class="carousel-item">
-            <img src="Slider/slider2.JPG" id="slider2">
+            <img src="Slider/slider2.JPG" id="slider2" alt="Second Slider image">
         </div>
         <div class="carousel-item">
-            <img src="Slider/slider3.JPG" id="slider3">
+            <img src="Slider/slider3.JPG" id="slider3" alt="Third Slider image">
         </div>
     </div>
 </div>
@@ -64,7 +64,7 @@
 <hr class="my-4">
 
 <div>
-<img class="img-fluid" src="Images/creatorQuote.jpg" id="creator">
+<img class="img-fluid" src="Images/creatorQuote.jpg" id="creator" alt="Creator image">
 </div>
 
 <hr class="my-4">
@@ -89,10 +89,10 @@
 
     <div class="col-s-6 text-center">
         <h2>Our selection: </h2> <br>
-        <img src="Watches/watch1.png" class="img-fluid watch">
-        <img src="Watches/watch2.png" class="img-fluid watch">
-        <img src="Watches/watch3.png" class="img-fluid watch">
-        <img src="Watches/watch.png" class="img-fluid watch">
+        <img src="Watches/watch1.png" class="img-fluid watch" alt="Example watch 1">
+        <img src="Watches/watch2.png" class="img-fluid watch" alt="Example watch 2">
+        <img src="Watches/watch3.png" class="img-fluid watch" alt="Example watch 3">
+        <img src="Watches/watch.png" class="img-fluid watch" alt="Example watch 4">
 
     </div>
 </div>
@@ -117,7 +117,7 @@
     <div class="container-fluid padding" >
         <div class="row text-center">
             <div class="col-md-4">
-                <img src="Logos/whiteSea.png">
+                <img src="Logos/whiteSea.png" alt="Footer Logo image">
                 <hr class="light">
                 <p>+45 546-878-64</p>
                 <p>abudigabbas@gmail.com</p>
